--- a/influencer/templates/influencer/profile_badge.html
+++ b/influencer/templates/influencer/profile_badge.html
@@ -6,66 +6,55 @@
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <div class="container">
     <div class="mdl-grid main-grid">
-        <div class="mdl-cell mdl-cell--3-col first-section">
-            {% if not request.user.is_brand %}
-                {% if request.user.get_profile_picture %}
-                <div class="profile-picture-wrapper">
-                    <img class="profile-picture-display" src="{{ request.user.get_profile_picture.url }}" />
-                </div>
+        <div class="mdl-cell mdl-cell--3-col">
+            <div class="first-section">
+                {% if not request.user.is_brand %}
+                    {% if request.user.get_profile_picture %}
+                    <div class="profile-picture-wrapper">
+                        <img class="profile-picture-display" src="{{ request.user.get_profile_picture.url }}" />
+                    </div>
+                    {% else %}
+                    <i class="material-icons placeholder-profile-picture">account_circle</i>
+                    {% endif %}
                 {% else %}
-                <i class="material-icons placeholder-profile-picture">account_circle</i>
+                    {% if influencer.user.get_profile_picture %}
+                    <div class="profile-picture-wrapper">
+                        <img class="profile-picture-display" src="{{ influencer.user.get_profile_picture.url }}" />
+                    </div>
+                    {% else %}
+                    <i class="material-icons placeholder-profile-picture">account_circle</i>
+                    {% endif %}
                 {% endif %}
-            {% else %}
-                {% if influencer.user.get_profile_picture %}
-                <div class="profile-picture-wrapper">
-                    <img class="profile-picture-display" src="{{ influencer.user.get_profile_picture.url }}" />
-                </div>
-                {% else %}
-                <i class="material-icons placeholder-profile-picture">account_circle</i>
-                {% endif %}
-            {% endif %}
-            <div class="details">
-                <div class="name">
-                    {{ fb_permissions.influencer.first_name }}
-                    {{ fb_permissions.influencer.last_name }}
-                </div>
-            </div>
-            <div class="mdl-grid details-grid">
-                <div class="mdl-cell mdl-cell--2-col">
-                    <div class="inner-content">
-                        <svg viewBox="0 0 24 24">
-                            <path fill="#EEEEEE"
-                                d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z">
-                            </path>
-                        </svg>
+                <div class="details">
+                    <div class="name">
+                        {{ fb_permissions.influencer.first_name }}
+                        {{ fb_permissions.influencer.last_name }}
                     </div>
                 </div>
-                <div class="mdl-cell mdl-cell--10-col">
-                    <div class="inner-content">
-                        {{ fb_permissions.ig_username }}
+                <div class="mdl-grid details-grid">
+                    <div class="mdl-cell mdl-cell--12-col insta-space">
+                        <div class="inner-content">
+                            <svg viewBox="0 0 24 24">
+                                <path fill="#EEEEEE"
+                                    d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z">
+                                </path>
+                            </svg>
+                            {{ fb_permissions.ig_username }}
+                        </div>
                     </div>
-                </div>
-                <div class="mdl-cell mdl-cell--2-col">
-                    <div class="inner-content">
-                        <i class="material-icons">trending_up</i>
+                    <div class="mdl-cell mdl-cell--12-col trending-space">
+                        <div class="inner-content">
+                            <i class="material-icons">trending_up</i>
+                            {{ fb_permissions.ig_follower_count }} Followers&nbsp;&nbsp;<i id="follower-count-info" class="material-icons info-icon">info</i>
+                        </div>
                     </div>
-                </div>
-                <div class="mdl-cell mdl-cell--10-col">
-                    <div class="inner-content">
-                        {{ fb_permissions.ig_follower_count }} Followers&nbsp;&nbsp;<i id="follower-count-info"
-                            class="material-icons info-icon">info</i>
-                    </div>
-                </div>
-                <div class="mdl-cell mdl-cell--2-col">
-                    <div class="inner-content">
-                        <i class="material-icons">open_in_new</i>
-                    </div>
-                </div>
-                <div class="mdl-cell mdl-cell--10-col">
-                    <div class="inner-content">
-                        <a href="https://instagram.com/{{ fb_permissions.ig_username }}" target="_blank">
-                            instagram.com/{{ fb_permissions.ig_username }}
-                        </a>
+                    <div class="mdl-cell mdl-cell--12-col instalink-space">
+                        <div class="inner-content">
+                            <i class="material-icons">open_in_new</i>
+                            <a href="https://instagram.com/{{ fb_permissions.ig_username }}" target="_blank">
+                                instagram.com/{{ fb_permissions.ig_username|slice:":11" }}{% if brand.website|length >= 11 %}...{% endif %}
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -168,7 +157,9 @@
     Updated every 3 hours
 </div>
 <script>
+    $('main').css('background-color', '#fff');
     {% if not request.user.is_brand %}
+        $('.profile-top-nav').addClass('is-active');
         $('#profile-top-nav-id').addClass('is-active');
     {% endif %}
 
@@ -230,13 +221,13 @@
 </script>
 <style>
     .container {
-        width: 85vw;
+        width: 90vw;
         margin: auto;
     }
 
     .profile-picture-display {
         border-radius: 50%;
-        width: 15vw;
+        width: 12vw;
     }
 
     .profile-picture-wrapper {
@@ -257,7 +248,15 @@
 
     .first-section {
         text-align: center;
-        margin-top: 5vh;
+        margin-top: 2vh;
+        padding-top: 4vh;
+        background-color: #150E41;
+        border-radius: 15px;
+        min-height: 100vh;
+        position: fixed;
+        width: 20vw;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
     }
 
     .details {
@@ -285,12 +284,27 @@
         color: #EEEEEE;
     }
 
+    .mdl-tabs.is-upgraded .mdl-tabs__tab {
+        background-color: #f5f5f5 !important;
+        color: #515151 !important;
+        border-radius: 15px;
+        font-size: 2vh;
+        text-transform: none;
+        line-height: 2vh;
+        font-family: 'Montserrat', sans-serif !important;
+        height: 5vh;
+        display: flex;
+        align-items: center;
+        margin-right: 1vw;
+    }
+
     .mdl-tabs.is-upgraded .mdl-tabs__tab.is-active {
-        color: #EEEEEE !important;
+        color: #fff !important;
+        background-color: #0471ff !important;
     }
 
     .mdl-tabs__tab.is-active::after {
-        background: #EEEEEE !important;
+        height: 0 !important;
     }
 
     .mdl-tabs__tab-bar i {
@@ -300,17 +314,24 @@
 
     .mdl-tabs__tab-bar {
         border-bottom: none;
+        justify-content: start;
+        position: fixed;
+        width: 100%;
+        background-color: #fff;
+        z-index: 99999;
+        padding-bottom: 1vh;
+        border-bottom: 1px solid #828282;
+        padding-top: 2vh;
+        padding-left: 1vw;
     }
 
     .mdl-tabs__panel {
-        background-color: #EEEEEE;
         min-height: 100%;
         border-radius: 5px;
-        min-height: 40vh;
-        padding: 2vh 0vw;
-        margin-top: 1vh;
+        min-height: 60vh;
+        padding-top: 10vh;
+        margin-top: 0;
         margin-bottom: 5vh;
-        position: relative;
     }
 
     .mdl-tabs__panel .mdl-button {
@@ -320,10 +341,12 @@
 
     .main-grid {
         padding-bottom: 0;
+        padding-top: 0;
     }
 
     .main-grid-cell {
         margin-bottom: 0;
+        margin-top: 0;
     }
 
     .panel-heading {
@@ -349,6 +372,7 @@
         font-size: 1.5em;
         margin-bottom: 2vh;
         text-align: center;
+        font-family: 'Montserrat', sans-serif;
     }
 
     .details-grid {
@@ -469,6 +493,40 @@
         overflow-wrap: anywhere;
         text-align: center;
         line-height: 1;
+    }
+
+    .insta-space {
+        color: #fff;
+        font-size: 2vh;
+        padding-top: 1vh;
+        padding-bottom: 1vh;
+        border: 1px solid #fff;
+        border-radius: 15px;
+        text-align: center;
+    }
+
+    .trending-space {
+        color: #fff;
+        font-size: 2vh;
+        padding-top: 1vh;
+        padding-bottom: 1vh;
+        border-radius: 15px;
+        text-align: center;
+        margin-top: 1.5vh !important;
+        background-color: #0471ff;
+        border: 1px solid #0471ff;
+    }
+
+    .instalink-space {
+        color: #fff;
+        font-size: 2vh;
+        padding-top: 1vh;
+        padding-bottom: 1vh;
+        border-radius: 15px;
+        text-align: center;
+        margin-top: 1.5vh !important;
+        background-color: #3b4877;
+        border: 1px solid #3b4877;
     }
 </style>
 {% endblock %}
