--- a/brand/templates/brand/profile.html
+++ b/brand/templates/brand/profile.html
@@ -631,6 +631,7 @@
         border: 1px solid #fff;
         border-radius: 15px;
         text-align: center;
+        margin-top: 1.5vh !important;
     }
 </style>
 {% endblock %}
