--- a/influencer/templates/influencer/base.html
+++ b/influencer/templates/influencer/base.html
@@ -15,7 +15,7 @@
 
 <body>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Eczar&family=Rubik:wght@300;400&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Montserrat:wght@500&display=swap');
 
         * {
             font-family: 'Rubik', sans-serif;
@@ -30,7 +30,14 @@
 
         button.mdl-button--colored {
             color: #161A1D !important;
-            background-color: #EEEEEE !important;
+            background-color: #fff !important;
+            border-radius: 15px;
+            text-transform: none;
+            font-size: 2vh;
+            font-family: 'Montserrat', sans-serif !important;
+            height: 5vh;
+            margin-top: 1.2vh;
+            line-height: 2vh;
         }
 
         button.action-required {
@@ -38,13 +45,13 @@
         }
 
         body {
-            background-color: #161A1D;
+            background-color: #150E41;
         }
 
         .mdl-layout__header {
             background-color: transparent;
             box-shadow: none;
-            margin-top: 1.5vh;
+            margin-top: 3vh;
         }
 
         .logo-container {
@@ -60,18 +67,20 @@
         }
 
         .logo-text {
-            font-size: 2em;
+            font-size: 4.5vh;
             padding-left: 10px;
-            font-family: 'Roboto Slab', serif;
+            font-family: 'Quicksand', sans-serif;
             color: #E0E0E0;
         }
 
         .mdl-layout__drawer-button {
-            margin-top: 3vh;
+            margin-top: 38px;
+            height: 7vh;
+            width: 7vh;
         }
 
         .mdl-layout__drawer-button>i {
-            font-size: 1.2em;
+            font-size: 6vh;
             color: #EEEEEE;
         }
 
@@ -95,6 +104,7 @@
             background-color: #EEEEEE;
             color: #161A1D;
             margin-bottom: 1.8vh;
+            display: none;
         }
 
         .top-menu i {
@@ -117,8 +127,12 @@
             color: #EEEEEE;
         }
 
+        .mdl-layout__drawer.is-visible {
+            width: 15vw;
+        }
+
         .view-all-notifs {
-            background-color: #161A1D !important;
+            background-color: #150E41 !important;
             color: #EEEEEE !important;
             margin: 10px 10px;
             border-radius: 10px;
@@ -127,10 +141,11 @@
         #notifications {
             margin-left: 2vw;
             margin-right: 1vw;
+            margin-top: 1.2vh;
+            font-size: 4vh;
         }
 
         .logo-menu-container {
-            background-color: #161A1D;
             margin: 4vh 1vw;
             display: flex;
             align-items: center;
@@ -140,7 +155,7 @@
         }
 
         .logo-menu-img {
-            height: 6vh;
+            height: 10vh;
         }
 
         .logo-menu-text {
@@ -150,8 +165,46 @@
             color: #E0E0E0;
         }
 
+        button.nav-buttons {
+            background-color: #3b4877 !important;
+            color: #fff !important;
+            border-radius: 15px;
+            font-size: 2vh;
+            text-transform: none;
+            line-height: 2vh;
+            font-family: 'Montserrat', sans-serif !important;
+            height: 5vh;
+            margin-top: 1.2vh;
+        }
+
+        button.nav-buttons.is-active {
+            background-color: #0471ff !important;
+            color: #fff !important;
+        }
+
         .mdl-navigation .mdl-navigation__link {
             color: #161A1D !important;
+        }
+
+        .mdl-layout__header-row {
+            padding: 0 2vw 0 6vw;
+            margin-bottom: 3.5vh;
+        }
+
+        button.sidenav-btn {
+            color: #161A1D !important;
+            text-transform: none !important;
+            font-family: 'Montserrat', sans-serif !important;
+            font-size: 3vh;
+            display: flex;
+            align-items: center;
+        }
+
+        button.logout-btn {
+            color: #b71c1c !important;
+            text-transform: none !important;
+            font-family: 'Montserrat', sans-serif !important;
+            font-size: 3vh;
         }
 
         .mdl-layout__header-row div.material-icons {
@@ -172,9 +225,20 @@
             border-top: 1px solid #EEEEEE
         }
 
+        #notif-log li {
+            padding-right: 2vw;
+            padding-left: 2vw;
+        }
+
         .no-notifs {
             text-align: center;
             margin-top: 1vh;
+            font-size: 2.5vh;
+            color: #424242;
+            line-height: 3vh;
+            padding-top: 4vh;
+            padding-bottom: 4vh;
+            font-family: 'Montserrat', sans-serif;
         }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
@@ -182,9 +246,21 @@
             <div class="mdl-layout__header-row">
                 <a href="{% url 'accounts:landing' %}" class="logo-container">
                     <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-img" />
-                    <div class="logo-text">ENDORSITY</div>
+                    <div class="logo-text">Endorsity</div>
                 </a>
                 <div class="mdl-layout-spacer"></div>
+                <a class="mdl-navigation__link" href="{% url 'influencer:brands' %}">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored nav-buttons brands-top-nav">
+                        <i class="material-icons active">local_offer</i>
+                        &nbsp;&nbsp;Brands
+                    </button>
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'influencer:profile_analytics' %}">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored nav-buttons profile-top-nav">
+                        <i class="material-icons active">account_circle</i>
+                        &nbsp;&nbsp;Profile
+                    </button>
+                </a>
                 {% if not request.user|is_influencer_unlocked %}
                 <a href="{% url 'influencer:qr_scanner' %}" class="mdl-navigation__link unlock-anchor">
                     <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
@@ -200,46 +276,29 @@
                     </button>
                 </a>
                 {% endif %}
-                <a class="settings-btn" href="{% url 'accounts:settings' %}">
-                    <div class="material-icons">
-                        settings
-                    </div>
-                </a>
                 {% notifs_unread request.user as notifs_unread_count %}
                 <div id="notifications"
                     class="material-icons {% if notifs_unread_count > 0 %}mdl-badge{% endif %} mdl-badge--overlap"
                     data-badge="{{ notifs_unread_count }}">
                     notifications
                 </div>
-                <a class="mdl-navigation__link" href="{% url 'accounts:logout' %}">
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                        <i class="material-icons">exit_to_app</i>
-                        &nbsp;&nbsp;Logout
-                    </button>
-                </a>
             </div>
         </header>
         <div class="mdl-layout__drawer">
             <div class="logo-menu-container">
                 <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-menu-img" />
-                <div class="logo-menu-text">ENDORSITY</div>
             </div>
             <nav class="mdl-navigation">
-                <a class="mdl-navigation__link" href="{% url 'accounts:how_it_works' %}">
-                    <i class="material-icons">engineering</i>
-                    &nbsp;&nbsp;How It Works
+                <a href="{% url 'accounts:settings' %}" class="mdl-navigation__link">
+                    <button class="mdl-button mdl-js-button sidenav-btn">
+                        <i class="material-icons">settings</i>
+                        &nbsp;Settings
+                    </button>
                 </a>
-                <a class="mdl-navigation__link" href="#">
-                    <i class="material-icons">monetization_on</i>
-                    &nbsp;&nbsp;Pricing
-                </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
-                    <i class="material-icons">question_answer</i>
-                    &nbsp;&nbsp;Contact Us
-                </a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
-                    <i class="material-icons">help</i>
-                    &nbsp;&nbsp;FAQs
+                <a href="{% url 'accounts:logout' %}" class="mdl-navigation__link">
+                    <button class="mdl-button mdl-js-button logout-btn">
+                        Logout
+                    </button>
                 </a>
             </nav>
         </div>
